--- a/src/app/modules/admin/components/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/modules/admin/components/admin-dashboard/admin-dashboard.component.scss
@@ -4,7 +4,9 @@
  */
 
 
- #container{
- background-color:var(--toast-background);
- color:var(--toast-text);
+
+
+ body{
+    background-color:var(--toast-background);
+ color:var(--toast-text); 
  }
