--- a/src/app/modules/admin/components/home/home.component.scss
+++ b/src/app/modules/admin/components/home/home.component.scss
@@ -7,3 +7,7 @@
     background-color:var(--toast-background);
     color:var(--toast-text);
 }
+body{
+    background-color:var(--toast-background);
+    color:var(--toast-text);
+}
