--- a/src/app/modules/admin/components/order-item-details/order-item-details.component.html
+++ b/src/app/modules/admin/components/order-item-details/order-item-details.component.html
@@ -1,15 +1,21 @@
-<h1 >Order Details</h1>
-<div id="left-arrow">
-  <i class="bi bi-arrow-left-circle"></i>
-  <svg xmlns="http://www.w3.org/2000/svg" width="35" height="25" fill="currentColor" class="bi bi-arrow-left-circle"
-    viewBox="0 0 16 16" (click)="goToOrdersList()">
-    <path fill-rule="evenodd"
-      d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z" />
-  </svg>
-</div>
+<html>
+
+<body>
 
 
-<!-- <div class="card-container">
+
+  <h1>Order Details</h1>
+  <div id="left-arrow">
+    <i class="bi bi-arrow-left-circle"></i>
+    <svg xmlns="http://www.w3.org/2000/svg" width="35" height="25" fill="currentColor" class="bi bi-arrow-left-circle"
+      viewBox="0 0 16 16" (click)="goToOrdersList()">
+      <path fill-rule="evenodd"
+        d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z" />
+    </svg>
+  </div>
+
+
+  <!-- <div class="card-container">
   <div>
     <div class="card">
 
@@ -64,54 +70,58 @@
     </div>
 
   </div> -->
-<div class="card-container">
-  <div>
-    <div class="card">
-      <div class="card-header">
-        <span>
+  <div class="card-container">
+    <div>
+      <div class="card">
+        <div class="card-header">
+          <span>
 
-          <li id="order"> <b>ORDER</b>
-            <br>#{{Orderdetails.orderId}}
-          </li>
-          <li><b>Submit Date</b>
-            <br>{{Orderdetails.orderSubmitDtTm |date}}
-          </li>
-          <li><b>Expected Date</b>
-            <br>{{Orderdetails.estimatedTime | date}}
-          </li>
-          <li><b>Total Amount</b>
-            <br>₹{{Orderdetails.totalAmount}}.00
-          </li>
-          <li><b>Order status</b>
-            <br>{{Orderdetails.status}}
-          </li>
-          <span class="icons">
-            <!-- <span class="float-right" data-bs-toggle="tooltip" title="Track Order" id="tooltip"> <i
+            <li id="order"> <b>ORDER</b>
+              <br>#{{Orderdetails.orderId}}
+            </li>
+            <li><b>Submit Date</b>
+              <br>{{Orderdetails.orderSubmitDtTm |date}}
+            </li>
+            <li><b>Expected Date</b>
+              <br>{{Orderdetails.estimatedTime | date}}
+            </li>
+            <li><b>Total Amount</b>
+              <br>₹{{Orderdetails.totalAmount}}.00
+            </li>
+            <li><b>Order status</b>
+              <br>{{Orderdetails.status}}
+            </li>
+            <span class="icons">
+              <!-- <span class="float-right" data-bs-toggle="tooltip" title="Track Order" id="tooltip"> <i
                 class="bi bi-geo-alt"></i></span> -->
-            <!-- <span class="float-right"> <i class="bi bi-receipt" data-bs-toggle="tooltip"
+              <!-- <span class="float-right"> <i class="bi bi-receipt" data-bs-toggle="tooltip"
                 title="Download Invoice"></i></span> -->
-            <!-- <span class="float-right"> <i class="bi bi-cart-x-fill" data-bs-toggle="tooltip"
+              <!-- <span class="float-right"> <i class="bi bi-cart-x-fill" data-bs-toggle="tooltip"
                 title="Cancel Order"></i></span> -->
+            </span>
           </span>
-        </span>
 
-      </div>
-      <div class="card-body" class="image-item" class="row">
-        <div class="col-lg-3 col-md-12 mb-4 mb-lg-0" *ngFor="let item of orderItemDetails">
-          <img src="{{imageBaseUrl}}{{item.imageUrl}}" class="image" height="130px" width="130px">
-          <div class="description">
-
-            <p><b>Product Name:</b>&nbsp;&nbsp;{{item.productName}}</p>
-            <p><b>Quantity:</b>&nbsp;&nbsp;{{item.quantity}}</p>
-            <p><b>price:</b>&nbsp;&nbsp;{{item.totalPrice}}</p>
-          </div>
         </div>
+        <div class="card-body" class="image-item" class="row">
+          <div class="col-lg-3 col-md-12 mb-4 mb-lg-0" *ngFor="let item of orderItemDetails">
+            <img src="{{imageBaseUrl}}{{item.imageUrl}}" class="image" height="130px" width="130px">
+            <div class="description">
+
+              <p><b>Product Name:</b>&nbsp;&nbsp;{{item.productName}}</p>
+              <p><b>Quantity:</b>&nbsp;&nbsp;{{item.quantity}}</p>
+              <p><b>price:</b>&nbsp;&nbsp;{{item.totalPrice}}</p>
+            </div>
+          </div>
 
 
 
 
+        </div>
       </div>
     </div>
+
   </div>
 
-</div>
+</body>
+
+</html>
