--- a/src/app/modules/admin/components/start-filling-action/start-filling-action.component.html
+++ b/src/app/modules/admin/components/start-filling-action/start-filling-action.component.html
@@ -1,41 +1,49 @@
 <!-- <button [print]="['printstartfillingform', config]" id="printbtn">Print</button> -->
+<html>
 
-<form [formGroup]="startFillingform" id="form">
-    <span mat-raised-button color="" mat-dialog-close id="crossbtn">X</span>
-    <h1>Fill Order</h1>
-    <input type="text" placeholder="{{Orderdetails.orderId}}" formControlName="orderId"
-        [(ngModel)]="Orderdetails.orderId" hidden>
-    <div id="table">
+<body>
 
-        <table class="custom-table" id="printstartfillingform">
-            <thead>
-                <tr>
-                    <th>IMAGE</th>
-                    <th>PRODUCT NAME</th>
-                    <th>PRODUCTSKU ID</th>
-                    <th>LOCATION</th>
-                    <th>QUANTITY</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let item of orderItemDetails">
-                    <td> <img src="{{imageBaseUrl}}{{item.imageUrl}}" class="image" height="110px" width="110px"></td>
-                    <td>{{item.productName}}</td>
-                    <td>{{item.productSkuId}}</td>
-                    <td>12345678</td>
-                    <td>{{item.quantity}}</td>
 
-                </tr>
+    <form [formGroup]="startFillingform" id="form">
+        <span mat-raised-button color="" mat-dialog-close id="crossbtn">X</span>
+        <h1>Fill Order</h1>
+        <input type="text" placeholder="{{Orderdetails.orderId}}" formControlName="orderId"
+            [(ngModel)]="Orderdetails.orderId" hidden>
+        <div id="table">
 
-            </tbody>
-        </table>
-    </div>
-    <div id="submittedbtns" *ngIf="startfilling">
+            <table class="custom-table" id="printstartfillingform">
+                <thead>
+                    <tr>
+                        <th>IMAGE</th>
+                        <th>PRODUCT NAME</th>
+                        <th>PRODUCTSKU ID</th>
+                        <th>LOCATION</th>
+                        <th>QUANTITY</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let item of orderItemDetails">
+                        <td> <img src="{{imageBaseUrl}}{{item.imageUrl}}" class="image" height="110px" width="110px">
+                        </td>
+                        <td>{{item.productName}}</td>
+                        <td>{{item.productSkuId}}</td>
+                        <td>12345678</td>
+                        <td>{{item.quantity}}</td>
 
-        <button mat-raised-button color="primary" (click)="startfillingaction()"
-            style="width: 100px;font-family: initial;font-weight: bolder;">Start</button>
+                    </tr>
 
-        <button type="submit" class="btn btn-danger" mat-dialog-close
-            style="font-family: initial;font-weight: bolder;width: 100px;margin-left: 20px;">Cancel</button>
-    </div>
-</form>
+                </tbody>
+            </table>
+        </div>
+        <div id="submittedbtns" *ngIf="startfilling">
+
+            <button mat-raised-button color="primary" (click)="startfillingaction()"
+                style="width: 100px;font-family: initial;font-weight: bolder;">Start</button>
+
+            <button type="submit" class="btn btn-danger" mat-dialog-close
+                style="font-family: initial;font-weight: bolder;width: 100px;margin-left: 20px;">Cancel</button>
+        </div>
+    </form>
+</body>
+
+</html>
