--- a/src/app/modules/admin/components/start-packing-action/start-packing-action.component.scss
+++ b/src/app/modules/admin/components/start-packing-action/start-packing-action.component.scss
@@ -212,13 +212,15 @@
 
  #form{
   width: 1000px;
-  height:550px;
+   height:580px;
    border: ridge 3px;
    overflow: hidden;
 }
 .card1{
   height: 200px;
-  margin-top: 50px;
+  margin-top: 20px;
+
+  
 }
 .card-body1{
   display: inline-flex;
@@ -233,7 +235,7 @@
 
 }
 #submittedbtns{
-    margin-top:200px;
+    margin-top:280px;
   margin-left: 360px;
  
  
@@ -249,11 +251,11 @@ color: black;
 }
 .printbtn2{
   // margin-left: 1100px;
-  width: 100px;
+  width: 130px;
   height: 30px;
   color:black;
    margin-top: 10px;
-   margin-left: -20px;
+   margin-left: -10px;
    position: relative;
 }
 #printbtns{
@@ -309,16 +311,26 @@ b{
    padding: 5px;
 
 }
+
+body{
+  background-color:var(--toast-background);
+  color:var(--toast-text);
+}
+::ng-deep .mat-dialog-container {
+  background-color: var(--toast-background); // Use your custom color here
+  color: var(--toast-text); // Use your custom text color here
+}
 @media screen and (min-width:360px) and (max-width:1360px){
   #form{
     width: 900px;
-    height:500px;
+    height:520px;
      border: ridge 3px;
-     overflow: hidden;
+     overflow: auto;
+     overflow-x: hidden;
 }
 .card1{
     height: 200px;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 .card-body1{
     display: inline-flex;
@@ -333,7 +345,7 @@ b{
   
 }
 #submittedbtns{
-      margin-top:170px;
+      margin-top:280px;
     margin-left: 360px;
    
    
@@ -349,11 +361,11 @@ b{
 }
 .printbtn2{
     // margin-left: 1100px;
-    width: 100px;
+    width: 130px;
     height: 30px;
     color:black;
      margin-top: 10px;
-     margin-left: -20px;
+     margin-left: -10px;
      position: relative;
 }
 #printbtns{
