--- a/src/app/product-sku-detail/product-sku-detail.component.html
+++ b/src/app/product-sku-detail/product-sku-detail.component.html
@@ -1,3 +1,9 @@
+
+<html>
+    <body>
+
+  
+
 <div id="left-arrow">
     <i class="bi bi-arrow-left-circle"></i>
     <svg xmlns="http://www.w3.org/2000/svg" width="35" height="25" fill="currentColor" class="bi bi-arrow-left-circle"
@@ -228,3 +234,5 @@
 
     </div>
 </form>
+</body>
+</html>
