--- a/src/app/product-sku-options/product-sku-options.component.scss
+++ b/src/app/product-sku-options/product-sku-options.component.scss
@@ -1,3 +1,7 @@
+/*
+ *   Copyright (c) 2023 Dmantz Technologies Pvt ltd
+ *   All rights reserved.
+ */
 .options{
     margin-left: 350px;
    border-style:ridge;
