--- a/src/app/modules/admin/components/add-new-option/add-new-option.component.html
+++ b/src/app/modules/admin/components/add-new-option/add-new-option.component.html
@@ -1,33 +1,45 @@
-<form id="form" [formGroup]="AddnewOptionform">
-  <span mat-raised-button color="" mat-dialog-close id="crossbtn">X</span>
-  <h1>Add New Option</h1>
-  <div class="row" id="main">
-    <div class="col-5">
-      <label for="OptionName" style="margin-top: 10px;font-family: initial;font-weight: bolder;font-size:18px;">OptionName:</label>
-      <input type="text" class="form-control" id="OptionName" formControlName="optionName">
-      <div *ngIf="AddnewOptionform.get('optionName')?.invalid && AddnewOptionform.get('optionName')?.touched" style="margin-top: 10px;">
-        <div *ngIf="AddnewOptionform.get('optionName')?.errors?.['required']" style="color: red;">Name is required.
+<html>
+
+<body>
+
+
+  <form id="form" [formGroup]="AddnewOptionform">
+    <span mat-raised-button color="" mat-dialog-close id="crossbtn">X</span>
+    <h1>Add New Option</h1>
+    <div class="row" id="main">
+      <div class="col-5">
+        <label for="OptionName"
+          style="margin-top: 10px;font-family: initial;font-weight: bolder;font-size:18px;">OptionName:</label>
+        <input type="text" class="form-control" id="OptionName" formControlName="optionName">
+        <div *ngIf="AddnewOptionform.get('optionName')?.invalid && AddnewOptionform.get('optionName')?.touched"
+          style="margin-top: 10px;">
+          <div *ngIf="AddnewOptionform.get('optionName')?.errors?.['required']" style="color: red;">Name is required.
+          </div>
         </div>
-      </div>
 
-    </div>
-    <div class="col-5">
-      <label for="OptionValue"  style="margin-top: 10px;font-family: initial;font-weight: bolder;font-size:18px;">OptionValue:</label>
-      <input type="text" class="form-control" id="OptionValue" formControlName="optionValue" required style="margin-top: 10px;">
-      <div *ngIf="AddnewOptionform.get('optionValue')?.invalid && AddnewOptionform.get('optionValue')?.touched">
-        <div *ngIf="AddnewOptionform.get('optionValue')?.errors?.['required']" style="color: red;">Name is required.
+      </div>
+      <div class="col-5">
+        <label for="OptionValue"
+          style="margin-top: 10px;font-family: initial;font-weight: bolder;font-size:18px;">OptionValue:</label>
+        <input type="text" class="form-control" id="OptionValue" formControlName="optionValue" required
+          style="margin-top: 10px;">
+        <div *ngIf="AddnewOptionform.get('optionValue')?.invalid && AddnewOptionform.get('optionValue')?.touched">
+          <div *ngIf="AddnewOptionform.get('optionValue')?.errors?.['required']" style="color: red;">Name is required.
+          </div>
         </div>
+
       </div>
-
     </div>
-  </div>
 
 
 
-  <div class="btns">
-    <button type="button" class="btn btn-success" (click)="addNewOption()">Submit</button>
-    <button type="button" class="btn btn-danger" id="cancelbtn" mat-dialog-close> Cancel</button>
-    <div *ngIf="submitted && !AddnewOptionform.valid" style="color: red;">All fields are required.</div>
-  </div>
+    <div class="btns">
+      <button type="button" class="btn btn-success" (click)="addNewOption()">Submit</button>
+      <button type="button" class="btn btn-danger" id="cancelbtn" mat-dialog-close> Cancel</button>
+      <div *ngIf="submitted && !AddnewOptionform.valid" style="color: red;">All fields are required.</div>
+    </div>
 
-</form>
+  </form>
+</body>
+
+</html>
