--- a/src/app/modules/admin/components/add-staff/add-staff.component.scss
+++ b/src/app/modules/admin/components/add-staff/add-staff.component.scss
@@ -78,6 +78,14 @@ button {
     margin-top: -55px;
     position: absolute;
 }
+body{
+    background-color:var(--toast-background);
+    color:var(--toast-text);
+  }
+  ::ng-deep .mat-dialog-container {
+    background-color: var(--toast-background); // Use your custom color here
+    color: var(--toast-text); // Use your custom text color here
+  }
 @media screen and (min-width:360px) and (max-width:1400px){
     .dialog-content {
         height: auto;
