--- a/src/app/modules/admin/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/modules/admin/components/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,13 @@
 <!-- <router-outlet></router-outlet> -->
+<html>
+    <head>
+        <title></title>
+    </head>
+    <body>
 <div id="container">
 <app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
 </div>
+</body>
+</html>
