--- a/src/app/modules/admin/components/check-quality-action/check-quality-action.component.scss
+++ b/src/app/modules/admin/components/check-quality-action/check-quality-action.component.scss
@@ -150,6 +150,14 @@ position: absolute;
 font-size: 20px;
 
 }
+body{
+  background-color:var(--toast-background);
+  color:var(--toast-text);
+}
+::ng-deep .mat-dialog-container {
+  background-color: var(--toast-background); // Use your custom color here
+  color: var(--toast-text); // Use your custom text color here
+}
 
 @media screen and (min-width:360px) and (max-width:1400px) {
 #form{
