--- a/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.scss
+++ b/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.scss
@@ -85,6 +85,15 @@ h1{
   margin-left: -40px;
 
 }
+
+body{
+  background-color:var(--toast-background);
+  color:var(--toast-text);
+}
+::ng-deep .mat-dialog-container {
+  background-color: var(--toast-background); // Use your custom color here
+  color: var(--toast-text); // Use your custom text color here
+}
 @media screen and (min-width:360px) and (max-width:1360px){
   #form{
     width:1000px;
