--- a/src/app/modules/admin/components/order-item-details/order-item-details.component.scss
+++ b/src/app/modules/admin/components/order-item-details/order-item-details.component.scss
@@ -1385,3 +1385,12 @@ h1{
   display: none;
 }
 
+
+body{
+  background-color:var(--toast-background);
+  color:var(--toast-text);
+}
+::ng-deep .mat-dialog-container {
+  background-color: var(--toast-background); // Use your custom color here
+  color: var(--toast-text); // Use your custom text color here
+}
