--- a/src/app/modules/admin/components/product-view/product-view.component.html
+++ b/src/app/modules/admin/components/product-view/product-view.component.html
@@ -1,3 +1,10 @@
+
+
+<html>
+  <body>
+
+
+
 <div  id="container">
   <div class="container-fluid mt-3">
     <div>
@@ -82,3 +89,5 @@
   </div>
 
 </div>
+</body>
+</html>
