--- a/src/app/modules/admin/components/products/products.component.html
+++ b/src/app/modules/admin/components/products/products.component.html
@@ -1,89 +1,101 @@
-<div >
+<html>
 
-  <div class="spacer">
-    <div>
-      <h1 class="product-heading">List of Products</h1>
+<body>
+
+
+  <div>
+
+    <div class="spacer">
+      <div>
+        <h1 class="product-heading">List of Products</h1>
+      </div>
     </div>
+    <div class="buttons-area">
+      <button mat-mini-fab class="filter-button" color="primary"
+        aria-label="Example icon button with a filter list icon">
+        <mat-icon>filter_list</mat-icon>
+      </button>
+      <button class="add-button" (click)="openDialog()" mat-stroked-button id="addnewproductbtn"> Add New
+        Product</button>
+    </div>
+
+    <div id="searchbar">
+      <mat-form-field class="example-header">
+        <mat-label  [ngStyle]="getInputStyles()">Search Here...</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder=""  [ngStyle]="getInputStyles()">
+      </mat-form-field>
+    </div>
+
+
+
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()">
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+            [checked]="selection.isSelected(row)">
+          </mat-checkbox>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef><b>ProductId</b></th>
+        <td mat-cell *matCellDef="let element"> {{element.productId}} </td>
+      </ng-container>
+
+
+
+      <ng-container matColumnDef="productName">
+        <th mat-header-cell *matHeaderCellDef><b>Product Name</b></th>
+        <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="productDesc">
+        <th mat-header-cell *matHeaderCellDef><b>Product Description</b></th>
+        <td mat-cell *matCellDef="let element"> {{element.productDesc}} </td>
+      </ng-container>
+
+
+
+
+      <ng-container matColumnDef="manufacturerName">
+        <th mat-header-cell *matHeaderCellDef><b>Manufacturer Name</b></th>
+        <td mat-cell *matCellDef="let element"> {{element.manufacturerName}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef><b>Actions</b></th>
+        <!-- <td mat-cell *matCellDef="let element"><button mat-mini-fab color="basic" (click)="GotoProduct(element.productId)"><mat-icon>input</mat-icon></button></td> -->
+        <td mat-cell *matCellDef="let element">
+          <span data-bs-toggle="tooltip" data-bs-placement="bottom" title=" Product Details">
+            <a style="color: black;" [routerLink]="['/admin/products', element.productId]"><mat-icon
+                id="arrowbtn">input</mat-icon></a>
+          </span>
+
+          <span data-bs-toggle="tooltip" data-bs-placement="bottom" title="Update Product" style="cursor: pointer;">
+            <i class="bi bi-pencil-square"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+              class="bi bi-pencil-square" viewBox="0 0 16 16" (click)="openUpdateProduct(element.productId)"
+              id="edibtn">
+              <path
+                d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+              <path fill-rule="evenodd"
+                d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+            </svg>
+          </span>
+        </td>
+      </ng-container>
+
+
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
   </div>
-  <div class="buttons-area">
-    <button mat-mini-fab class="filter-button" color="primary" aria-label="Example icon button with a filter list icon">
-      <mat-icon>filter_list</mat-icon>
-    </button>
-    <button class="add-button" (click)="openDialog()" mat-stroked-button id="addnewproductbtn"> Add New Product</button>
-  </div>
+</body>
 
-  <div id="searchbar">
-    <mat-form-field class="example-header">
-      <input matInput (keyup)="applyFilter($event)" placeholder="Search Here...">
-    </mat-form-field>
-  </div>
-
-
-
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <ng-container matColumnDef="select">
-      <th mat-header-cell *matHeaderCellDef>
-        <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
-          [indeterminate]="selection.hasValue() && !isAllSelected()">
-        </mat-checkbox>
-      </th>
-      <td mat-cell *matCellDef="let row">
-        <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-          [checked]="selection.isSelected(row)">
-        </mat-checkbox>
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef><b>ProductId</b></th>
-      <td mat-cell *matCellDef="let element"> {{element.productId}} </td>
-    </ng-container>
-
-
-
-    <ng-container matColumnDef="productName">
-      <th mat-header-cell *matHeaderCellDef><b>Product Name</b></th>
-      <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="productDesc">
-      <th mat-header-cell *matHeaderCellDef><b>Product Description</b></th>
-      <td mat-cell *matCellDef="let element"> {{element.productDesc}} </td>
-    </ng-container>
-
-
-
-
-    <ng-container matColumnDef="manufacturerName">
-      <th mat-header-cell *matHeaderCellDef><b>Manufacturer Name</b></th>
-      <td mat-cell *matCellDef="let element"> {{element.manufacturerName}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef><b>Actions</b></th>
-      <!-- <td mat-cell *matCellDef="let element"><button mat-mini-fab color="basic" (click)="GotoProduct(element.productId)"><mat-icon>input</mat-icon></button></td> -->
-      <td mat-cell *matCellDef="let element">
-        <span data-bs-toggle="tooltip" data-bs-placement="bottom" title=" Product Details">
-          <a style="color: black;" [routerLink]="['/admin/products', element.productId]"><mat-icon
-              id="arrowbtn">input</mat-icon></a>
-        </span>
-
-        <span data-bs-toggle="tooltip" data-bs-placement="bottom" title="Update Product" style="cursor: pointer;">
-          <i class="bi bi-pencil-square"></i>
-          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-pencil-square"
-            viewBox="0 0 16 16" (click)="openUpdateProduct(element.productId)" id="edibtn">
-            <path
-              d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
-            <path fill-rule="evenodd"
-              d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
-          </svg>
-        </span>
-      </td>
-    </ng-container>
-
-
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-
-</div>
+</html>
