--- a/src/app/modules/admin/components/products/products.component.scss
+++ b/src/app/modules/admin/components/products/products.component.scss
@@ -9,11 +9,14 @@ table {
     // color:var(--toast-text);
    
   }
-
+body{
+  background-color:var(--toast-background);
+  color:var(--toast-text);
+}
   .mat-header-cell {
     background-color: #7474e3;
      background-color:var(--product-listbg);
-    color:var(--toast-text);
+     color:var(--font-color);
   }
  
   .mat-cell{
@@ -44,11 +47,11 @@ table {
     color:var(--toast-text);
   }
 
-  b {
-    color: rgb(255, 255, 255);
+  // b {
+  //   color: rgb(255, 255, 255);
     
-    color:var(--toast-text);
-  }
+  //   color:var(--toast-text);
+  // }
 
   .spacer > div {
     height: 80px;
