--- a/src/app/modules/admin/components/staff-list/staff-list.component.html
+++ b/src/app/modules/admin/components/staff-list/staff-list.component.html
@@ -1,3 +1,9 @@
+
+<html>
+   <body>
+
+ 
+
 <div class="demo-button-container">
     <button mat-raised-button class="demo-button" (click)="addStaffbtn()"> Add Staff </button>
     <h1>Staff List</h1>
@@ -57,3 +63,5 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 </div>
+</body> 
+</html>
