--- a/src/app/modules/admin/components/staff-list/staff-list.component.scss
+++ b/src/app/modules/admin/components/staff-list/staff-list.component.scss
@@ -28,11 +28,15 @@
     background-color: rgb(143, 204, 206);
   }
   .mat-header-cell{
-    font-size: 20px;
+   font-size: 20px;
     color: black;
     justify-content: center;
     font-weight: bold;
-    background-color:var(--toast-background);
+    // background-color:var(--toast-background);
+    // color:var(--toast-text);
+  }
+  .mat-header-row{
+    background-color:var(--stafflistbg);
     color:var(--toast-text);
   }
   .mat-cell{
@@ -56,6 +60,14 @@
     font-size: 31px;
   }
 
+  body{
+    background-color:var(--toast-background);
+    color:var(--toast-text);
+  }
+  ::ng-deep .mat-dialog-container {
+    background-color: var(--toast-background); // Use your custom color here
+    color: var(--toast-text); // Use your custom text color here
+  }
   @media screen and (min-width: 360px) and (max-width: 1360px) {
     #table {
       width:1100px;
