--- a/src/app/modules/admin/components/staff-verification/staff-verification.component.html
+++ b/src/app/modules/admin/components/staff-verification/staff-verification.component.html
@@ -1,22 +1,35 @@
-<form [formGroup]="staffVerificationForm" id="secondform">
-    <div class="row">
-      
-       
-        <label style="font-size: 20px; margin-top:100px;margin-left: 90px;font-family: initial;font-weight: bolder;">Enter Staff Code: </label>
-        <div class="col-5" id="staffcd">
-            <input type="text" formControlName="staffCd" class="form-control" style="border-color: black;">
-            <div *ngIf="staffVerificationForm.get('staffCd').hasError('required')" class="text-danger">Staff Code  is required.</div>
-            <div *ngIf="staffVerificationForm.get('staffCd').hasError('pattern')" class="text-danger">Invalid Staff Code format.</div>
+<html>
+
+<body>
+
+
+
+    <form [formGroup]="staffVerificationForm" id="secondform">
+        <div class="row">
+
+
+            <label
+                style="font-size: 20px; margin-top:100px;margin-left: 90px;font-family: initial;font-weight: bolder;">Enter
+                Staff Code: </label>
+            <div class="col-5" id="staffcd">
+                <input type="text" formControlName="staffCd" class="form-control" style="border-color: black;">
+                <div *ngIf="staffVerificationForm.get('staffCd').hasError('required')" class="text-danger">Staff Code is
+                    required.</div>
+                <div *ngIf="staffVerificationForm.get('staffCd').hasError('pattern')" class="text-danger">Invalid Staff
+                    Code format.</div>
+            </div>
+
+            <div class="col-3" id="sbmtbtn">
+                <button type="submit" (click)="submitSecondForm()" class="btn btn-success">Submit</button>
+
+
+                <button mat-raised-button color="warn" mat-dialog-close style="margin-left:20px">Cancel</button>
+            </div>
         </div>
 
-        <div class="col-3" id="sbmtbtn">
-            <button type="submit" (click)="submitSecondForm()" class="btn btn-success">Submit</button>
-           
-        
-            <button mat-raised-button color="warn" mat-dialog-close style="margin-left:20px">Cancel</button>
-        </div>
-    </div>
 
+    </form>
 
-</form>
+</body>
 
+</html>
