--- a/src/app/modules/admin/components/start-filling-action/start-filling-action.component.scss
+++ b/src/app/modules/admin/components/start-filling-action/start-filling-action.component.scss
@@ -76,6 +76,15 @@ h1{
    position: sticky;
   
 }
+
+body{
+  background-color:var(--toast-background);
+  color:var(--toast-text);
+}
+::ng-deep .mat-dialog-container {
+  background-color: var(--toast-background); // Use your custom color here
+  color: var(--toast-text); // Use your custom text color here
+}
 @media screen and (min-width:360px) and (max-width:1400px) {
   #form{
     width:1000px;
