--- a/src/app/modules/admin/components/verify-payment/verify-payment.component.html
+++ b/src/app/modules/admin/components/verify-payment/verify-payment.component.html
@@ -1,61 +1,70 @@
-<button [print]="['printverifipaymentform', config]" id="printbtn"
-    style="font-family: initial;font-weight: bolder;font-family: initial;">Print</button>
+<html>
 
-<form id="form">
-    <span mat-raised-button color="" mat-dialog-close id="crossbtn">X</span>
+<body>
 
-    <h1>Verify Payment</h1>
 
-    <div class="card" class="card1">
+    <button [print]="['printverifipaymentform', config]" id="printbtn"
+        style="font-family: initial;font-weight: bolder;font-family: initial;">Print</button>
 
-        <div class="card-body" class="card-body1" id="printverifipaymentform">
-            <div class="row">
-                <div class="col-3">
-                    <label class="lables">OrderId:</label>
-                    <input type="text" class="form-control" placeholder="{{Orderdetails.orderId}}"
-                        [attr.disabled]="isDisabled ? true : null">
+    <form id="form">
+        <span mat-raised-button color="" mat-dialog-close id="crossbtn">X</span>
+
+        <h1>Verify Payment</h1>
+
+        <div class="card" class="card1">
+
+            <div class="card-body" class="card-body1" id="printverifipaymentform">
+                <div class="row">
+                    <div class="col-3">
+                        <label class="lables">OrderId:</label>
+                        <input type="text" class="form-control" placeholder="{{Orderdetails.orderId}}"
+                            [attr.disabled]="isDisabled ? true : null">
+
+                    </div>
+
+                    <div class="col-3">
+                        <label class="lables">Mobile number:</label>
+                        <input type="text" class="form-control" placeholder="{{Orderdetails.mobileNumber}}"
+                            [attr.disabled]="isDisabled ? true : null">
+                    </div>
+                    <div class="col-3">
+                        <label class="lables">Payment Id:</label>
+                        <input type="text" class="form-control" placeholder="{{Orderdetails.pgRazorpayPaymentId}}"
+                            [attr.disabled]="isDisabled ? true : null">
+                    </div>
+                </div>
+                <div class="row" id="secondrow">
+                    <div class="col-3">
+                        <label class="lables">Order Submitted Date:</label>
+                        <input type="text" class="form-control" placeholder="{{Orderdetails.orderSubmitDtTm |date}}"
+                            [attr.disabled]="isDisabled ? true : null">
+                    </div>
+                    <div class="col-3">
+                        <label class="lables">Total Amount:</label>
+                        <input type="text" class="form-control" placeholder="{{totalAmount}}"
+                            [attr.disabled]="isDisabled ? true : null">
+                    </div>
 
                 </div>
 
-                <div class="col-3">
-                    <label class="lables">Mobile number:</label>
-                    <input type="text" class="form-control" placeholder="{{Orderdetails.mobileNumber}}"
-                        [attr.disabled]="isDisabled ? true : null">
-                </div>
-                <div class="col-3">
-                    <label class="lables">Payment Id:</label>
-                    <input type="text" class="form-control" placeholder="{{Orderdetails.pgRazorpayPaymentId}}"
-                        [attr.disabled]="isDisabled ? true : null">
-                </div>
+
+
+
+
             </div>
-            <div class="row" id="secondrow">
-                <div class="col-3">
-                    <label class="lables">Order Submitted Date:</label>
-                    <input type="text" class="form-control" placeholder="{{Orderdetails.orderSubmitDtTm |date}}"
-                        [attr.disabled]="isDisabled ? true : null">
-                </div>
-                <div class="col-3">
-                    <label class="lables">Total Amount:</label>
-                    <input type="text" class="form-control" placeholder="{{totalAmount}}"
-                        [attr.disabled]="isDisabled ? true : null">
-                </div>
-
-            </div>
-
-
-
-
-
         </div>
-    </div>
-    <div id="submittedbtns">
+        <div id="submittedbtns">
 
-        <button class="btn btn-success" (click)="paymentSuccess(orderId)"
-            style="width: 100px;font-weight: bolder;">PASS</button>
+            <button class="btn btn-success" (click)="paymentSuccess(orderId)"
+                style="width: 100px;font-weight: bolder;">PASS</button>
 
-        <button class="btn btn-primary" (click)="paymentFailed()"
-            style="margin-left:20px;width:100px;font-weight: bolder;">FAIL</button>
-        <button type="submit" class="btn btn-danger" mat-dialog-close
-            style="font-family: initial;font-weight: bolder;width: 100px;margin-left: 20px;">Cancel</button>
-    </div>
-</form>
+            <button class="btn btn-primary" (click)="paymentFailed()"
+                style="margin-left:20px;width:100px;font-weight: bolder;">FAIL</button>
+            <button type="submit" class="btn btn-danger" mat-dialog-close
+                style="font-family: initial;font-weight: bolder;width: 100px;margin-left: 20px;">Cancel</button>
+        </div>
+    </form>
+
+</body>
+
+</html>
